accesswidener, fix creative mode tab

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,3 +12,7 @@ sourceSets.main {
         exclude("src/generated/resources/.cache")
     }
 }
+
+loom {
+    accessWidenerPath = file("src/main/resources/satchels.accesswidener")
+}
