--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ minecraft_version=1.21.1
 fabric_loader_version=0.16.14
 fabric_api_version=0.116.3+1.21.1
 neoforge_version=21.1.184
+
+jankson_version=1.2.3
