--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionNeoForge')
+
+    forgeRuntimeLibrary("blue.endless:jankson:$rootProject.jankson_version")
 }
 
 processResources {
