--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,6 +4,8 @@ architectury {
 
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
+
+    include implementation("blue.endless:jankson:$rootProject.jankson_version")
 }
 
 sourceSets.main {
