vercte posts "Biggest Nothing Ever", incinerated

--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -11,6 +11,12 @@ loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
 
     runs {
+        create("client 2") {
+            client()
+
+            name = "Second Client"
+            programArgs("--username", "AnotherDev")
+        }
         create("datagen") {
             data()
 
