--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,7 @@ jankson_version=1.2.3
 
 # Mod Support
 curios_version=9.5.1
+trinkets_version=3.10.0
+
+# Developer Conveniences
+modmenu_version=11.0.3
