--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -28,6 +28,17 @@ configurations {
     }
 }
 
+repositories {
+    maven {
+        name = "TerraformersMC"
+        url = "https://maven.terraformersmc.com/"
+    }
+    maven {
+        name = "LadySnake Maven"
+        url = "https://maven.ladysnake.org/releases"
+    }
+}
+
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
     modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"
@@ -36,6 +47,9 @@ dependencies {
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
 
     include implementation("blue.endless:jankson:$rootProject.jankson_version")
+
+    modImplementation("com.terraformersmc:modmenu:$rootProject.modmenu_version")
+    modImplementation("dev.emi:trinkets:$rootProject.trinkets_version")
 }
 
 processResources {
